# ZenithWotModpack

./: .gitignore  Modlist.txt  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js
api/: .env  index.ts  package.json  server.ts  tsconfig.json
api/src/: auth.ts  env.ts  router.ts
apps/client/: components.json  index.html  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/: package.json
client/: index.html  package.json  tailwind.config.js  vite.config.ts
client/src/: App.tsx  AppRouter.tsx  globals.css  index.css  main.tsx
client/src-tauri/: tauri.conf.json
old_client/: package.json  tailwind.config.js
old_client/src/: AppRouter.tsx
src/: App.tsx  AppRouter.tsx  api.ts  index.css  main.tsx
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: db.rs  greet.rs  installMod.rs  install_mod.rs  main.rs  types.rs  utils.rs  wot_modification.rs
src-tauri/src/api_handlers/: install_mod.rs  mod.rs  unzip_file.rs
src-tauri/src/commands/: config.rs  mod.rs  mod_installer.rs  unzip_file_command.rs
src-tauri/src/db/: init.rs  mod.rs  queries.rs
src-tauri/src/db/migrations/: v0.rs
src-tauri/src/utils/: download.rs  download_file.rs  file.rs  game_modification.rs  mod.rs  wot_modification.rs
src/api/: fetchMods.ts  rust.ts  useMods.ts
src/assets/: AddIcon.tsx  ArrowLeft.tsx  CheckIcon.tsx  CheckLarge.tsx  Circle.tsx  DownloadIcon.tsx  LoadingSpinner.tsx  Logo.tsx  PagesIcons.tsx  Pen.tsx  RemoveIcon.tsx  Star.tsx  Window.tsx  Wrench.tsx  twitchIcon.tsx
src/components/: App.tsx  Button.tsx  FileDirInput.tsx  GameDirectoryInput.tsx
src/data/: gameVersion.ts  modlist.ts
src/features/: mod.ts  profile.ts
src/layouts/: Navbar.tsx  Titlebar.tsx
src/modInstaller/: installScripts.ts  installUtils.ts  mod.ts  modbuilder.ts
src/routes/: InitialSetupPage.tsx  about.tsx  contact.tsx  currentlyinstalled.tsx  error.tsx  home.tsx  modPage.tsx  mods.tsx  profiles.tsx  root.tsx  settings.tsx  (+1 more)
(+131 files in other folders)
