[package]
name = "zenith_wot_modpack"
version = "0.0.0"
description = "A Tauri App"
authors = ["Evan Altwarg"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.28"
tempfile = "3.0.4"
reqwest = "0.11.18"
zip-extensions = "0.6.1"
error-chain = "0.12.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
