[package]
name = "zenith_wot_modpack"
version = "0.0.0"
description = "A Tauri App"
authors = ["Evan Altwarg"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "window-set-min-size", "clipboard-all", "window-unminimize", "window-unmaximize", "window-close", "window-maximize", "window-minimize", "window-start-dragging", "window-show", "window-hide", "path-all", "fs-all", "http-all", "dialog-open", "shell-open"] }
zip-extensions = "0.6.1"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specta = "1.0.5"
tauri-specta = { version = "1.0.2", features = ["javascript", "typescript"] }
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
